--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         </activity>
 
         <activity android:name=".MainActivity" />
+        <activity android:name=".RecordActivity" />
 
         <service android:name=".RecorderService" android:foregroundServiceType="microphone" />
 
