--- a/android/build.gradle
+++ b/android/build.gradle
@@ -33,21 +33,15 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation "androidx.activity:activity:1.2.0-rc01"
+    implementation "androidx.activity:activity-ktx:1.2.0-rc01"
+    implementation "androidx.fragment:fragment-ktx:1.3.0-rc01"
     implementation "androidx.documentfile:documentfile:1.0.1"
     implementation 'com.google.android.material:material:1.2.1'
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
 
-    implementation 'com.madgag.spongycastle:core:1.58.0.0'
-    implementation group: 'com.ibm.icu', name: 'icu4j-charset', version: '63.1'
     implementation 'org.greenrobot:eventbus:3.2.0'
 
-    api "com.squareup.okhttp3:okhttp:4.9.0"
-    api("de.ruedigermoeller:fst:2.56") {
-        exclude group: 'org.javassist', module: 'javassist'
-    }
-
-    api project(':design')
+    api "me.minhael:design-bootstrap:$design_version"
 }
