--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,29 +34,29 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation 'com.google.android.material:material:1.2.1'
 
-// Koin AndroidX Scope feature
     implementation "org.koin:koin-androidx-scope:$koin_version"
-// Koin AndroidX ViewModel feature
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-// Koin AndroidX Fragment Factory
     implementation "org.koin:koin-androidx-fragment:$koin_version"
-// Koin AndroidX Work Manager (unstable version)
     implementation "org.koin:koin-androidx-workmanager:$koin_version"
-// Koin AndroidX Compose (unstable version)
-    implementation "org.koin:koin-androidx-compose:$koin_version"
 
     implementation 'net.danlew:android.joda:2.10.9'
     implementation 'org.slf4j:slf4j-api:1.7.30'
     implementation 'com.github.tony19:logback-android:2.0.0'
 
+    implementation "me.minhael:design-fst:$design_version"
+    implementation "me.minhael:design-icu:$design_version"
+    implementation "me.minhael:design-okhttp:$design_version"
     implementation project(":android")
 }
