--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,14 @@
 buildscript {
     ext.kotlin_version = "1.4.10"
     ext.koin_version = '2.2.2'
+    ext.design_version = '1.0.0'
+    ext.work_version = "2.4.0"
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,6 +19,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
     }
