--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
-        android:name=".MainApplication"
+        android:name=".component.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,7 +18,7 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".SplashActivity"
+            android:name=".component.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -27,11 +27,11 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" />
-        <activity android:name=".RecordActivity" />
-        <activity android:name=".ScheduleActivity" />
+        <activity android:name=".component.MainActivity" />
+        <activity android:name=".component.RecordActivity" />
+        <activity android:name=".component.ScheduleActivity" />
 
-        <service android:name=".RecorderService" android:foregroundServiceType="microphone" />
+        <service android:name=".component.RecorderService" android:foregroundServiceType="microphone" />
 
     </application>
 
