--- a/design-koin/build.gradle
+++ b/design-koin/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
@@ -6,13 +6,13 @@ android {
     buildToolsVersion "30.0.1"
 
     defaultConfig {
-        applicationId "me.minhael.recorder"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -21,16 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
-    buildFeatures {
-        viewBinding true
-    }
-
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
@@ -39,24 +33,18 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
-
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
-    implementation "androidx.cardview:cardview:1.0.0"
-    implementation 'com.google.android.material:material:1.2.1'
+    api "androidx.work:work-runtime-ktx:$work_version"
 
-    implementation 'net.danlew:android.joda:2.10.9'
-    implementation 'com.github.tony19:logback-android:2.0.0'
+    api "org.koin:koin-androidx-scope:$koin_version"
+    api "org.koin:koin-androidx-viewmodel:$koin_version"
+    api "org.koin:koin-androidx-fragment:$koin_version"
+    api "org.koin:koin-androidx-workmanager:$koin_version"
 
-    implementation "me.minhael:design-fst:$design_version"
-    implementation "me.minhael:design-icu:$design_version"
-    implementation "me.minhael:design-okhttp:$design_version"
-    implementation project(':design-android')
-    implementation project(':design-koin')
+    api "me.minhael:design-ktx:$design_version"
 }
