--- a/design-koin/src/main/AndroidManifest.xml
+++ b/design-koin/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.minhael.design.koin">
+<manifest package="me.minhael.design.koin">
 
 </manifest>
