feat: add measurable for sound level detection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".component.RecordActivity" />
+        <activity android:name=".component.RecorderActivity" />
         <activity android:name=".component.ScheduleActivity" />
 
         <service android:name=".component.RecorderService" android:foregroundServiceType="microphone" />
