feat: export simple json report for sound levels

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation "me.minhael:design-fst:$design_version"
     implementation "me.minhael:design-icu:$design_version"
     implementation "me.minhael:design-okhttp:$design_version"
+    implementation "me.minhael:design-jackson:$design_version"
     implementation project(':design-android')
     implementation project(':design-koin')
 }
