refactor: settings & views
introduce junit 5 for testing
update androidfs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
         </activity>
 
         <activity android:name=".component.RecorderActivity" />
-        <activity android:name=".component.ScheduleActivity" />
+        <activity
+            android:name=".component.SettingsActivity"
+            android:parentActivityName=".component.RecorderActivity"/>
 
         <service android:name=".component.RecorderService" android:foregroundServiceType="microphone" />
 
