--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
-apply plugin: 'com.google.firebase.firebase-perf'
+//apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'kotlin-android'
 
 android {
@@ -40,6 +40,12 @@ android {
 }
 
 dependencies {
+    testImplementation "me.minhael:design-test:$design_version"
+    testImplementation 'org.mockito:mockito-inline:2.28.2'
+    testImplementation "org.koin:koin-test:$koin_version"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
@@ -48,20 +54,16 @@ dependencies {
     implementation 'com.google.android.gms:play-services-basement:17.5.0'
 
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
-    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation 'com.google.firebase:firebase-perf-ktx'
-
-    testImplementation "me.minhael:design-test:$design_version"
-    testImplementation 'org.mockito:mockito-inline:2.28.2'
-    testImplementation "org.koin:koin-test:$koin_version"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+//    implementation 'com.google.firebase:firebase-perf-ktx'
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation "androidx.fragment:fragment-ktx:1.3.0-rc01"
     implementation "androidx.constraintlayout:constraintlayout:2.0.4"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'androidx.preference:preference-ktx:1.1.1'
     implementation 'com.google.android.material:material:1.2.1'
 
     implementation 'com.github.tony19:logback-android:2.0.0'
