--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@
 buildscript {
     ext.kotlin_version = "1.4.21"
     ext.koin_version = '2.2.2'
-    ext.design_version = '1.0.1'
+    ext.design_version = 'local-SNAPSHOT'
     ext.work_version = "2.4.0"
     repositories {
         google()
@@ -13,7 +13,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-        classpath 'com.google.firebase:perf-plugin:1.3.4'
+//        classpath 'com.google.firebase:perf-plugin:1.3.4'
+
+        classpath("de.mannodermaus.gradle.plugins:android-junit5:1.7.0.0")
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -22,6 +24,7 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenLocal()
         google()
         jcenter()
         maven {
