--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
-apply plugin: 'com.google.firebase.crashlytics'
+//apply plugin: 'com.google.firebase.crashlytics'
 //apply plugin: 'com.google.firebase.firebase-perf'
 apply plugin: 'kotlin-android'
 
@@ -55,7 +55,7 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:26.3.0')
 //    implementation 'com.google.firebase:firebase-analytics-ktx'
-    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 //    implementation 'com.google.firebase:firebase-perf-ktx'
 
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -70,6 +70,10 @@ dependencies {
 
     // https://mvnrepository.com/artifact/commons-io/commons-io
     implementation group: 'commons-io', name: 'commons-io', version: '2.8.0'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-collections4
+    implementation group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+
+    implementation 'com.github.AnyChart:AnyChart-Android:1.1.2'
 
     implementation "me.minhael:design-fst:$design_version"
     implementation "me.minhael:design-icu:$design_version"
