--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.4'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-//        classpath 'com.google.firebase:perf-plugin:1.3.4'
+        classpath 'com.google.firebase:perf-plugin:1.3.4'
 
         classpath("de.mannodermaus.gradle.plugins:android-junit5:1.7.0.0")
 
@@ -27,6 +27,7 @@ allprojects {
         mavenLocal()
         google()
         jcenter()
+        maven { url 'https://jitpack.io' }
         maven {
             url "http://ne.xus/repository/maven-releases/"
             credentials {
