--- a/design-android/build.gradle
+++ b/design-android/build.gradle
@@ -45,14 +45,19 @@ android {
 
 dependencies {
     testImplementation "me.minhael:design-test:$design_version"
+
     androidTestImplementation("me.minhael:design-test:$design_version") {
         exclude group: 'joda-time', module: 'joda-time'
         exclude group: 'org.hamcrest', module: 'hamcrest-core'
     }
     androidTestImplementation "me.minhael:design-fst:$design_version"
-    androidTestImplementation "androidx.test:runner:1.3.0"
+
+    androidTestImplementation "androidx.work:work-testing:$work_version"
     androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.2.0"
     androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.2.0"
+    androidTestImplementation "org.mockito:mockito-android:3.7.7"
+
+    androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
