--- a/design-koin/build.gradle
+++ b/design-koin/build.gradle
@@ -12,6 +12,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArgument("runnerBuilder", "de.mannodermaus.junit5.AndroidJUnit5Builder")
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -28,16 +29,45 @@ android {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.md'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/LICENSE-notice.md'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
+    testImplementation "me.minhael:design-test:$design_version"
+
+    androidTestImplementation("me.minhael:design-test:$design_version") {
+        exclude group: 'joda-time', module: 'joda-time'
+        exclude group: 'org.hamcrest', module: 'hamcrest-core'
+    }
+
+    androidTestImplementation "de.mannodermaus.junit5:android-test-core:1.2.0"
+    androidTestRuntimeOnly "de.mannodermaus.junit5:android-test-runner:1.2.0"
+    androidTestImplementation "org.mockito:mockito-android:3.7.7"
+    androidTestImplementation "org.koin:koin-test:$koin_version"
+    androidTestImplementation "androidx.work:work-testing:$work_version"
+
+    androidTestImplementation "androidx.test:runner:1.3.0"
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
+
+    implementation "org.quartz-scheduler:quartz:2.3.2"
 
     api "androidx.work:work-runtime-ktx:$work_version"
 
@@ -47,4 +77,6 @@ dependencies {
     api "org.koin:koin-androidx-workmanager:$koin_version"
 
     api "me.minhael:design-ktx:$design_version"
+
+    api project(':design-android')
 }
